centered profile links

--- a/home.html
+++ b/home.html
@@ -38,11 +38,7 @@
                 <li><i class="fa-solid fa-briefcase "> Projects</i></li>
                 <li><i class="fa-solid fa-phone "> Contact</i></li>
             </ul> 
-        </div>
-        <div class="profile-links">
-            <a href="https://www.linkedin.com/in/nobukho-boyce" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="https://www.github.com/nboyce9" target="_blank"><i class="fa-brands fa-github"></i></a>
-        </div>         
+        </div>        
         </div>
     <div class="container-fluid col-9 d-block justify-content-center align-items-center">
         <div class="hero">
@@ -52,6 +48,10 @@
         <div class="greeting mb-5">
             <h1  class="text-center mb-2">Nobukho Boyce</h1>
             <p class="text-center">Software Developer</p>
+            <div class="profile-links">
+                <a href="https://www.linkedin.com/in/nobukho-boyce" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://www.github.com/nboyce9" target="_blank"><i class="fa-brands fa-github"></i></a>
+            </div> 
             <a class="btn-branding-contact" href="files/nobukhoBoyceResume.pdf" download>Resume</a>
         </div>
 
@@ -68,7 +68,7 @@
                 </p>
             </div>
 
-            <h2 class=" mt-5 mb-5">Skills</h2> 
+            <h2 class="text-center mt-5 mb-5">Skills</h2> 
                 <div class="col d-flex justify-content-between">
                     <div class="skill">
                         <p>Java</p>
