linked th side bar menu

--- a/home.html
+++ b/home.html
@@ -31,13 +31,11 @@
     <div class="side-bar col-3 d-flex">       
         <div class="profile-small">
         </div> 
-        <div class="menu-bar">
-            <ul>
-                <li><i class="fa-solid fa-home ">  Home</i></li>
-                <li><i class="fa-solid fa-user"> About</i></li>
-                <li><i class="fa-solid fa-briefcase "> Projects</i></li>
-                <li><i class="fa-solid fa-phone "> Contact</i></li>
-            </ul> 
+        <div class="menu-bar d-block">
+            <a href="/home.html"><i class="fa-solid fa-home ">  Home</i></li></a>
+            <a href="/home.html#about"><i class="fa-solid fa-user"> About</i></a>
+            <a href="/projects.html"><i class="fa-solid fa-briefcase "> Projects</i></a>
+            <a href="/home.html#contact"><i class="fa-solid fa-phone "> Contact</i></a>
         </div>        
         </div>
     <div class="container-fluid col-9 d-block justify-content-center align-items-center">
@@ -47,7 +45,7 @@
 
         <div class="greeting mb-5">
             <h1  class="text-center mb-2">Nobukho Boyce</h1>
-            <p class="text-center">Software Developer</p>
+            <p class="text-center">Aspiring Software Developer</p>
             <div class="profile-links">
                 <a href="https://www.linkedin.com/in/nobukho-boyce" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://www.github.com/nboyce9" target="_blank"><i class="fa-brands fa-github"></i></a>
