allow mobile responsiveness

--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Nobukho Boyce's Portfolio" />
-        <meta name="keywords" content="Nobukho Boyce, Portfolio, Front-end Developer, Website Portfolio, Projects, About, Contact" />
+        <meta name="keywords" content="Nobukho Boyce, Portfolio, software Developer, Website Portfolio, Projects, About, Contact, Projects" />
         <title>Projects</title>
         <!-- Google Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,7 +33,7 @@
             <a class="btn-branding-outline" href="/home.html">Home</a>
             <a class="btn-branding-outline" href="/home.html#about">About</a>
             <a class="btn-branding-outline" href="/projects.html">Projects</a>
-            <a class="btn-branding-outline" href="/home.html#contact">Contact</a>
+            <a class="btn-branding-outline" href="/projects.html#contact">Contact</a>
             </div>
         </nav>
         
@@ -141,7 +141,7 @@
 
 
     <footer>
-        <div class="footer-container">
+        <div class="footer-container" id="contact">
             <div class="contact-me-box d-block justify-content-between pb-5">
                     <h2 class="p-4">Contact Me</h2>
                     <div class="contact-links d-flex justify-content-around">
