--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Nobukho Boyce's Portfolio" />
-    <meta name="keywords" content="Nobukho Boyce, Portfolio, Front-end Developer, Website Portfolio, Projects, About, Contact" />
+    <meta name="keywords" content="Nobukho Boyce, Portfolio, Software Developer, Website Portfolio, Projects, About, Contact, Skills" />
     <title>Home</title>
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,7 +28,7 @@
 </head>
 <body>
     <div class="container-fluid row">
-    <div class="side-bar col-3 d-flex">       
+    <div class="side-bar col-3">       
         <div class="profile-small">
         </div> 
         <div class="menu-bar d-block">
