adding a new project image

--- a/projects.html
+++ b/projects.html
@@ -112,6 +112,27 @@
             </div>
         </div>
 
+        <div class="row row-cols-1 row-cols-md-2 g-4 mb-5">
+            <div class="col project">
+                <h6 class="text-center">To-Do List App</h6>
+                <p>A simple web application to manage your to-do tasks. Users can add, edit,  
+                    delete and mark tasks.
+                    </p>
+                <div class="stack mb-3">
+                    <span style="background:rgb(255, 217, 0); color:black">JavaScript</span>
+                    <span style="background:#1572B6; color:black">CSS</span>
+                    <span  style="background:#E44D26; color:black">HTML</span>
+                </div>  
+                <div>
+                    <img src="images/to-do-app.png" alt="" class="img-fluid">
+                </div>
+                <div class="project-btns d-flex">
+                    <a class="btn-branding-contact" href="https://nb-to-do.netlify.app/" target="_blank">View <i class="fa-solid fa-globe"></i></a>
+                    <a class="btn-branding-contact" href="https://github.com/nboyce9/todo-list-webapp" target="_blank">Github <i class="fa-brands fa-github"></i></a>
+                </div>  
+            </div>
+        </div>
+
         <div class="certifications mt-4">
             <h1 class="text-center">Certifications</h1>
             <div class="row">
