added a git hub link

--- a/projects.html
+++ b/projects.html
@@ -128,7 +128,7 @@
                 </div>
                 <div class="project-btns d-flex">
                     <a class="btn-branding-contact" href="https://nb-to-do.netlify.app/" target="_blank">View <i class="fa-solid fa-globe"></i></a>
-                    <a class="btn-branding-contact" href="https://github.com/nboyce9/todo-list-webapp" target="_blank">Github <i class="fa-brands fa-github"></i></a>
+                    <a class="btn-branding-contact" href="https://github.com/nboyce9/the-pit" target="_blank">Github <i class="fa-brands fa-github"></i></a>
                 </div>  
             </div>
         </div>
