--- a/projects.html
+++ b/projects.html
@@ -127,7 +127,7 @@
                     <img src="images/the-pit-website.png" alt="" class="img-fluid">
                 </div>
                 <div class="project-btns d-flex">
-                    <a class="btn-branding-contact" href="https://nb-to-do.netlify.app/" target="_blank">View <i class="fa-solid fa-globe"></i></a>
+                    <a class="btn-branding-contact" href="https://nb-the-pit.netlify.app/" target="_blank">View <i class="fa-solid fa-globe"></i></a>
                     <a class="btn-branding-contact" href="https://github.com/nboyce9/the-pit" target="_blank">Github <i class="fa-brands fa-github"></i></a>
                 </div>  
             </div>
